python/testData/quickFixes/PyTypeHintsQuickFixTest/callableTwoElementsParenthesizedAsFirst.py
from typing import Callable

g: Callable[<error descr="'Callable' must be used as 'Callable[[arg, ...], result]'">(int<caret>)</error>, str]